k8s/hello-world.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hello-world
  template:
    metadata:
      labels:
        component: hello-world
    spec:
      containers:
        - name: hello-world
          image: amitairtel09/hello-kubernetes
          ports:
            - containerPort: 80
