k8s/hello-world-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: hello-world
  ports:
    - port: 80 
      targetPort: 80
